# implicit_neural_representation

./: .gitignore  .pre-commit-config.yaml  README.md  gaussian_experiment.py  justfile  main.py  main_3d.py  main_opt.py  pyproject.toml
.github/workflows/: test.yml
inr/: experiment.py  flexible_loss_weight.py  measure.py  reconstruction.py  sample.py  settings.py  training.py  training_config.py
inr/base/: loss.py  training_config.py
inr/loss/: __init__.py  base.py  developable.py  digs.py  dnm.py  eikonal.py  flatcad.py  gauss_bonnet.py  gaussian_curvature.py  ncadr.py  sample.py
src/: experiment.py  logger.py  measure.py  reconstruction.py  sdf_net.py  training.py  training_config.py  visualize.py
src/base/: training_config.py
src/data/: __init__.py  base.py  circle_sampler.py  mesh_sampler.py  simple_training_data.py  square_sampler.py
src/io/: load.py
src/loss/: __init__.py  base.py  developable.py  digs.py  dirichlet.py  dirichlet_loss.py  dnm.py  double_trace_gaussian_curvature.py  eikonal.py  eikonal_loss.py  ncadr.py  sample.py  true_distance_loss.py
src/model/: projection.py  sdf_net.py  siren.py
tests/: conftest.py  test_experiment.py  test_losses.py  test_training_config.py
