[project]
name = "implicit-neural-representation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "open3d>=0.19.0",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pyrefly>=0.55.0",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 120
